AUGREL/src/objects/SfArchivedStarsSR__x.object
<CustomObject>
    <description>SfArchivedStarsSR</description>
    <externalDataSource>OData4Stars</externalDataSource>
    <externalName>SfArchivedStarsSR</externalName>
    <fields>
        <fullName>financialAccountNumber__c</fullName>
        <description>financialAccountNumber</description>
        <externalDeveloperName>financialAccountNumber</externalDeveloperName>
        <label>financialAccountNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastUpdatedBy__c</fullName>
        <description>lastUpdatedBy</description>
        <externalDeveloperName>lastUpdatedBy</externalDeveloperName>
        <label>lastUpdatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastUpdatedDate__c</fullName>
        <description>lastUpdatedDate</description>
        <externalDeveloperName>lastUpdatedDate</externalDeveloperName>
        <label>lastUpdatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>serviceResult__c</fullName>
        <description>serviceResult</description>
        <externalDeveloperName>serviceResult</externalDeveloperName>
        <label>serviceResult</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srCategory__c</fullName>
        <description>srCategory</description>
        <externalDeveloperName>srCategory</externalDeveloperName>
        <label>srCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srCreatedBy__c</fullName>
        <description>srCreatedBy</description>
        <externalDeveloperName>srCreatedBy</externalDeveloperName>
        <label>srCreatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srCreatedDate__c</fullName>
        <description>srCreatedDate</description>
        <externalDeveloperName>srCreatedDate</externalDeveloperName>
        <label>srCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>srDescriptionText__c</fullName>
        <description>srDescriptionText</description>
        <externalDeveloperName>srDescriptionText</externalDeveloperName>
        <label>srDescriptionText</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>srNumber__c</fullName>
        <description>srNumber</description>
        <externalDeveloperName>srNumber</externalDeveloperName>
        <label>srNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srRecipient__c</fullName>
        <description>srRecipient</description>
        <externalDeveloperName>srRecipient</externalDeveloperName>
        <label>srRecipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srStatus__c</fullName>
        <description>srStatus</description>
        <externalDeveloperName>srStatus</externalDeveloperName>
        <label>srStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srType__c</fullName>
        <description>srType</description>
        <externalDeveloperName>srType</externalDeveloperName>
        <label>srType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userGroup__c</fullName>
        <description>userGroup</description>
        <externalDeveloperName>userGroup</externalDeveloperName>
        <label>userGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SfArchivedStarsSR</label>
    <pluralLabel>SfArchivedStarsSR</pluralLabel>
</CustomObject>